2015-01-22  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r171388. rdar://problem/19451349

    2014-07-22  Brent Fulgham  <bfulgham@apple.com>

            [Win] Build fix for EWS bots.

            * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp: Forward declare
            structure definition.

2015-01-22  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r171385. rdar://problem/19451349

    2014-07-22  Brent Fulgham  <bfulgham@apple.com>

            [Win] Fix Crash when handling Legible Output callbacks
            https://bugs.webkit.org/show_bug.cgi?id=134946

            Reviewed by Dean Jackson.

            Relanding after adding fixes to support build bots.

            * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp:
            (WebCore::InbandTextTrackPrivateAVF::processNativeSamples): Remove
            Windows-specific 'ASSERT_NOT_REACHED' code path.
            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
            (WebCore::createLegibleOutputSubtypes): Added.
            (WebCore::AVFWrapper::createPlayerItem): Updated to request native
            samples from AVFoundationCF.

2015-01-21  Matthew Hanson  <matthew_hanson@apple.com>

        Merge 171357. rdar://problem/19451349

    2014-07-22  Brent Fulgham  <bfulgham@apple.com>

            [Win] Fix Crash when handling Legible Output callbacks
            https://bugs.webkit.org/show_bug.cgi?id=134946

            Reviewed by Dean Jackson.

            * platform/graphics/avfoundation/InbandTextTrackPrivateAVF.cpp:
            (WebCore::InbandTextTrackPrivateAVF::processNativeSamples): Remove
            Windows-specific 'ASSERT_NOT_REACHED' code path.
            * platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
            (WebCore::createLegibleOutputSubtypes): Added.
            (WebCore::AVFWrapper::createPlayerItem): Updated to request native
            samples from AVFoundationCF.